--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
 Django==1.8.1
 MySQL-python==1.2.5
+Pillow==2.9.0
 South==1.0.2
 argparse==1.2.1
+braintree==3.19.0
 django-autoslug==1.8.0
 django-countries==3.3
 django-endless-pagination==2.0
 django-extensions==1.5.5
 django-merchant==0.2
 django-paypal==0.2.5
-pygraphviz==1.2
 requests==2.7.0
 six==1.9.0
 stripe==1.7.10
